Bumps up thincolumn to be a bit wider to prevent text wrapping in nav

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 	max-width: 61rem;
 }
 .thincolumn {
-	max-width: 11rem;
+	max-width: 12rem;
 }
 .masthead {
 	height: 11rem;
